Fix z-index

--- a/app/components/Form/Form.module.scss
+++ b/app/components/Form/Form.module.scss
@@ -15,6 +15,7 @@
 		&::before {
 			content: "";
 			position: fixed;
+			z-index: 1;
 			inset: 0;
 			width: 100%;
 			height: 100%;
